k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 ingressClassName: nginx
 rules:
   - http:
      paths:
        - path: /orders/?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: order-service
              port:
                number: 5000
        - path: /stock/?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: stock-service
              port:
                number: 5000
        - path: /payment/?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-service
              port:
                number: 5000
